Fix #1 for iphone layout issues

--- a/style.css
+++ b/style.css
@@ -185,11 +185,11 @@ main {
 }
 
 #about p {
-  margin-top: clamp(4rem, 15vw, 1rem);
-  font-size: clamp(1rem, 2.5vw, 1.875rem);
+  margin-top: clamp(4rem, 15dvw, 1rem);
+  font-size: clamp(1rem, 2.5dvw, 1.875rem);
   text-align:center;
   justify-self: center;
-  max-width: clamp(250px, 70vw, 1000px);
+  max-width: clamp(250px, 70dvw, 1000px);
 }
 
 /* FOOTER */
@@ -237,8 +237,8 @@ footer {
 
 /* iframe styling */
 #resume-content iframe {
-  width: clamp(260px, 40vw, 600px);
-  height: clamp(300px, 50vw, 800px);
+  width: clamp(260px, 40dvw, 600px);
+  height: clamp(300px, 50dvw, 800px);
   border-radius: 1rem;
   border: none;
 }
@@ -337,15 +337,15 @@ form button:hover {
         display:flex;
         justify-self:center;
         align-items:center;
-        width: clamp(10rem, 20vw, 30rem);
-        height: clamp(10rem, 20vw, 30rem);
+        width: clamp(10rem, 20dvw, 30rem);
+        height: clamp(10rem, 20dvw, 30rem);
     }
     iframe {
       display:flex;
       justify-self:center;
       align-items:center;
-      width: clamp(20rem, 30vw, 40rem);
-      height: clamp(20rem, 30vw, 40rem);
+      width: clamp(20rem, 30dvw, 40rem);
+      height: clamp(20rem, 30dvw, 40rem);
       border-radius: 1rem;
       border: none;
     }
